gcc/testsuite/gfortran.dg/include_6.f90
! { dg-do compile }
! { dg-options "-I gfortran.log" }
! { dg-error "is not a directory" "" { target *-*-* } 0 }
end 

